chore(release): bump to v1.2.0
Highlights:
- argus zgc command + ZGC trend tracking + allocation hotspots
- 3 ZGC-aware Doctor rules; Generational ZGC detection
- 7 live-JVM diagnostic gap fixes
- 3 quality-of-life features (asprof capabilities, NMT not-enabled,
  gclog density)
- README slim 469→107; cli-commands.md split into 5 category files;
  new docs/contributing.md

Signed-off-by: rlaope <piyrw9754@gmail.com>